--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="ISHIKAWA YUKAのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">JOHO TARO</a>
+					<a href=".">ISHIKAWA YUKA</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
@@ -36,15 +36,15 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">JOHO TARO</p>
+					<p class="main-visual-title">ISHIKAWA YUKA</p>
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
-							HCSなら、即戦力になるためのスキルが<br class="sp-only">ガッチリ身につきます。<br>
+							北海道の視力が悪い19歳<br class="sp-only">
+							アイドルが好き<br class="sp-only">
 						</p>
 					</div>
 				</div>
@@ -90,14 +90,14 @@
 			<!-- skill -->
 			<section class="skill section" id="skill">
 				<div class="inner">
-					<h2 class="title">SKILL</h2>
+					<h2 class="title">ITEM</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/twitter.svg"></p>
 							<div class="skill-body">
-								<h3 class="skill-name">HTML5/CSS3</h3>
+								<h3 class="skill-name">Twitter</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									結局一番使う</p>
 							</div>
 						</div>
 						<div class="skill-item">
