--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							北海道の視力が悪い19歳<br class="sp-only">
+							北海道の視力が悪い19歳<br class="sp-only"><br>
 							アイドルが好き<br class="sp-only">
 						</p>
 					</div>
@@ -96,32 +96,29 @@
 							<p class="skill-img"><img src="portfolio/img/twitter.svg"></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Twitter</h3>
-								<p class="skill-text">
-									結局一番使う</p>
+								<p class="skill-text"></p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/instagram-icon.svg" alt=""></p>
 							<div class="skill-body">
-								<h3 class="skill-name">Python</h3>
-								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+								<h3 class="skill-name">instagram</h3>
+								<p class="skill-text"></p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/discord-icon.svg" alt=""></p>
 							<div class="skill-body">
-								<h3 class="skill-name">Java</h3>
-								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+								<h3 class="skill-name">discord
+								</h3>
+								<p class="skill-text"></p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/youtube-icon.svg" alt=""></p>
 							<div class="skill-body">
-								<h3 class="skill-name">国家試験</h3>
-								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+								<h3 class="skill-name">Youtube</h3>
+								<p class="skill-text"></p>
 							</div>
 						</div>
 					</div>
