--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<ul class="header-nav-list">
 						<li class="header-nav-item"><a href="#about">ABOUT</a></li>
 						<li class="header-nav-item"><a href="#works">WORKS</a></li>
-						<li class="header-nav-item"><a href="#skill">SKILL</a></li>
+						<li class="header-nav-item"><a href="#skill">ITEM</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -97,29 +97,24 @@
 							<p class="skill-img"><img src="portfolio/img/twitter.svg"></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Twitter</h3>
-								<p class="skill-text"></p>
 							</div>
 						</div>
 						<div class="skill-item">
 							<p class="skill-img"><img src="portfolio/img/instagram-icon.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">instagram</h3>
-								<p class="skill-text"></p>
 							</div>
 						</div>
 						<div class="skill-item">
 							<p class="skill-img"><img src="portfolio/img/discord-icon.svg" alt=""></p>
 							<div class="skill-body">
-								<h3 class="skill-name">discord
-								</h3>
-								<p class="skill-text"></p>
+								<h3 class="skill-name">discord</h3>
 							</div>
 						</div>
 						<div class="skill-item">
 							<p class="skill-img"><img src="portfolio/img/youtube-icon.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Youtube</h3>
-								<p class="skill-text"></p>
 							</div>
 						</div>
 					</div>
