--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="ISHIKAWA YUKAのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 	<link href="portfolio/css/ress.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="portfolio/img/favicon.ico" />
@@ -35,9 +35,14 @@
 		<!-- /header -->
 		<main class="content">
 			<!-- main-visual -->
+		
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
+					<p class="main-visual-logo">
+						<img src="portfolio/img/23122021014247A.png" />
+					</p>
 					<p class="main-visual-title">ISHIKAWA YUKA</p>
+					
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
@@ -45,7 +50,8 @@
 						</p>
 						<p class="main-visual-text">
 							北海道の視力が悪い19歳<br class="sp-only"><br>
-							アイドルが好き<br class="sp-only">
+							アイドルが好き<br class="sp-only"><br>
+
 						</p>
 					</div>
 				</div>
