--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="ISHIKAWA YUKAのポートフォリオサイトです" />
+	<meta name="description" content="ISHIKAWA YUKAのポートフォリオサイトです。最近好きなアイドルがグループを卒業して卒業ライブのライブビューイングで泣いてしまいました。" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,11 +39,11 @@
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
 					<p class="main-visual-logo">
-						<img src="portfolio/img/23122021014247A.png" />
+						<img src="portfolio/img/24122021002710A.png" />
 					</p>
+					<br>
 					<p class="main-visual-title">ISHIKAWA YUKA</p>
-					
-					<p class="main-visual-subtitle">PORTFOLIO</p>
+					<br>
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
