--- a/lesson7/contact/index.html
+++ b/lesson7/contact/index.html
@@ -59,7 +59,7 @@
         <!-- 項目名 -->
         <label for="yourName" class="form-label">お名前</label>
         <!-- 入力欄：テキスト -->
-        <div>
+        <div class="form-col">
           <input type="text" name="お名前" id="yourName">
         </div>
       </div>
@@ -68,7 +68,7 @@
         <!-- 項目名 -->
         <label for="yourEmail" class="form-label">Email</label>
         <!-- 入力欄：email -->
-          <div>
+          <div class="form-col">
             <input type="email" name="E-Mail" id="yourEmail">
           </div>
       </div>
