--- a/lesson7/contact/index.html
+++ b/lesson7/contact/index.html
@@ -77,8 +77,8 @@
         <!-- 項目名 -->
         <label for="yourInquiry" class="form-label">お問い合わせ内容</label>
         <!-- 入力欄：テキストエリア -->
-        <div>
-          <textarea name="お問い合わせ" id="yourinquiry" cols="30" rows="10"></textarea>
+        <div class="form-col">
+          <textarea name="お問い合わせ内容" id="yourInquiry" cols="30" rows="10"></textarea>
         </div>
 
       </div>
