--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li class="header-nav-item"><a href="#about">ABOUT</a></li>
 						<li class="header-nav-item"><a href="#works">WORKS</a></li>
 						<li class="header-nav-item"><a href="#skill">ITEM</a></li>
+						<li class="header-nav-item"><a href="#map">MAP</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -49,6 +50,7 @@
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
+							2002.10.30<br>
 							北海道の視力が悪い19歳<br class="sp-only"><br>
 							アイドルが好き<br class="sp-only"><br>
 
@@ -124,10 +126,28 @@
 								<h3 class="skill-name">Youtube</h3>
 							</div>
 						</div>
+						<div class="skill-item">
+							<p class="skill-img"><img src="portfolio/img/spotify-icon.svg" alt=""></p>
+							<div class="skill-body">
+								<h3 class="skill-name">spotify</h3>
+							</div>
+						</div>
+						<div class="skill-item">
+							<p class="skill-img"><img src="portfolio/img/Tiktok-icon.svg" alt=""></p>
+							<div class="skill-body">
+								<h3 class="skill-name">Tiktok</h3>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 			<!-- /skill -->
+			<section class="map section" id="map">
+				<h2 class="title">MAP</h2>
+				<figure class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46640.55605951326!2d141.3223880768164!3d43.06173661123746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2bd6e30a2985%3A0x5398ede5382c8a3c!2z5a2m5qCh5rOV5Lq66Zu75a2Q6ZaL55m65a2m5ZySIOWMl-a1t-mBk-aDheWgseWwgumWgOWtpuagoQ!5e0!3m2!1sja!2sjp!4v1643330236267!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				</figure>
+			</section>
 			<div class="page-top" id="js-page-top">
 				<span class="material-icons-outlined">expand_less</span>
 			</div>
